# NWebtoon_Downloader

./: .gitignore  ImageMerger.py  NWebtoon.py  Nwebtoon.py  README.md  build.json  main.py  pyproject.toml  requirements.txt  settings.ini
module/: Headers.py  HtmlMaker.py  ImageMerger.py  Nwebtoon.py  Settings.py  file_processor.py  html_maker.py  image_merger.py  input_validate.py  settings.py  template.html  template2.html  title_changer.py  webtoon_analyzer.py
module/template/: template.html
module/webtoon/: analyzer.py  downloader.py  nwebtoon.py  search.py
type/: api_article_list_info.py  api_article_list_info_v2.py  api_search_all.py  nwebtoon.py  thread_pool_results.py
type/api/: article_list.py  comic_info.py  search_all.py  webtoon_type.py
