[project]
name = "nwebtoon-downloader"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiohttp>=3.12.15",
    "bs4>=0.0.2",
    "chardet>=5.2.0",
    "jinja2>=3.1.6",
    "natsort>=8.4.0",
    "opencv-python>=4.12.0.88",
    "pydantic>=2.11.7",
    "requests>=2.32.5",
    "rich>=14.1.0",
    "tqdm>=4.67.1",
]
