[project]
name = "nwebtoon-downloader"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiofiles>=24.1.0",
    "aiohttp>=3.12.15",
    "auto-py-to-exe>=2.47.0",
    "beautifulsoup4>=4.13.5",
    "bs4>=0.0.2",
    "chardet>=5.2.0",
    "jinja2>=3.1.6",
    "lxml>=6.0.1",
    "natsort>=8.4.0",
    "opencv-python>=4.12.0.88",
    "pydantic>=2.11.7",
    "requests>=2.32.5",
    "rich>=14.1.0",
    "tqdm>=4.67.1",
]
